# tap-taxjar

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_taxjar/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
